--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^6.12.0",
     "http-errors": "^1.6.3",
     "jade": "~1.11.0",
+    "luxon": "^1.27.0",
     "mongoose": "^5.12.14",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.7",
