--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
-    "express-session": "^1.17.2",
+    "express-session": "^1.5.0",
     "express-validator": "^6.12.0",
     "http-errors": "^1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "luxon": "^1.27.0",
     "mongoose": "^5.12.14",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   }
 }
