--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "luxon": "^1.27.0",
     "mongoose": "^5.12.14",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
